# rotten-tomatoes

./: .gitignore  Justfile  README.md  datasets.yaml  kalshi_recent_rotten_tomatoes.csv  main.py  models.yaml  prediction.model  prediction_tron.model  pyproject.toml
app/: main.py
app/schemas/: __init__.py  market.py  prediction.py  validation.py
app/templates/: index.html  market_detail.html  search.html
app/utils/: __init__.py  helpers.py
configs/: datasets.yaml  models.yaml  tracked_markets.txt
configs/data/: processed_dummy.csv
core/: config.py  datasets.py  model_registry.py  security.py
data/: README.md  all_movies_analyzed.xlsx  all_movies_summary.csv  all_movies_summary.xlsx  processed.csv  processed_dummy.csv  processed_dummy.full.csv  processed_movies.csv  processed_tron.csv  tron-sample.csv
data/film_specific/: now_you_see_me_now_you_dont.csv  predator_badlands.csv  rental_family.csv  sarahs_oil.csv  the_running_man.csv  the_witcher_s04.csv  wake_up_dead_man.csv  wicked_for_good.csv  zootopia_2.csv
scripts/: README.md  compare_models.py  datagen_config_example.json  fetch_market_from_url.py  find_past_rt_markets.py  generate_processed_data.py  generate_synthetic_data.py  populate_all_movies.py  populate_wake_up_dead_man.py  scrape.py  search_market.py  train.py  transform_tron.py
scripts/scrapers/: __init__.py  (+2 more)
services/: backtest.py  cache.py  gemini_integration.py  kalshi_api.py  kalshi_service.py  prediction_service.py
tests/: conftest.py  test_cache.py  test_kalshi_api.py  test_model_registry.py  test_predictors.py  test_validation.py
(+7 files in other folders)
