[project]
name = "rotten-tomatoes"
version = "0.1.0"
description = "Kalshi Rotten Tomatoes Prediction Market Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.0",
    "notebook>=7.1.0",
]
